src/norx/oobject.nim


proc addUniqueFX*(pstObject: ptr orxOBJECT; zFXConfigID: cstring): orxSTATUS {.
    cdecl, importc: "orxObject_AddUniqueFX", dynlib: libORX.}
  ## Adds a unique FX using its config ID. Refer to orxObject_AddUniqueDelayedFX() for details, since this
  ##  function is the same as it with the delay argument set to 0.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _zFXConfigID    Config ID of the FX to add
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc addUniqueFXRecursive*(pstObject: ptr orxOBJECT;
                                    zFXConfigID: cstring) {.cdecl,
    importc: "orxObject_AddUniqueFXRecursive", dynlib: libORX.}
  ## Adds a unique FX to an object and its children.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _zFXConfigID    Config ID of the FX to add

proc addDelayedFX*(pstObject: ptr orxOBJECT; zFXConfigID: cstring;
                            fDelay: orxFLOAT): orxSTATUS {.cdecl,
    importc: "orxObject_AddDelayedFX", dynlib: libORX.}
  ## Adds a delayed FX using its config ID.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _zFXConfigID    Config ID of the FX to add
  ##  @param[in]   _fDelay         Delay time
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc addDelayedFXRecursive*(pstObject: ptr orxOBJECT;
                                     zFXConfigID: cstring; fDelay: orxFLOAT;
                                     bPropagate: orxBOOL) {.cdecl,
    importc: "orxObject_AddDelayedFXRecursive", dynlib: libORX.}
  ## Adds a delayed FX to an object and its children.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _zFXConfigID    Config ID of the FX to add
  ##  @param[in]   _fDelay         Delay time
  ##  @param[in]   _bPropagate    Should the delay be incremented with each child application?

proc addUniqueDelayedFX*(pstObject: ptr orxOBJECT;
                                  zFXConfigID: cstring; fDelay: orxFLOAT): orxSTATUS {.
    cdecl, importc: "orxObject_AddUniqueDelayedFX", dynlib: libORX.}
  ## Adds a unique delayed FX using its config ID. The difference between this function and orxObject_AddDelayedFX()
  ##  is that this one does not add the specified FX, if the object already has an FX with the same config ID attached.
  ##  note that the "uniqueness" is determined immediately at the time of this function call, not at the time of the
  ##  FX start (i.e. after the delay).
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _zFXConfigID    Config ID of the FX to add
  ##  @param[in]   _fDelay         Delay time
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc addUniqueDelayedFXRecursive*(pstObject: ptr orxOBJECT;
    zFXConfigID: cstring; fDelay: orxFLOAT; bPropagate: orxBOOL) {.cdecl,
    importc: "orxObject_AddUniqueDelayedFXRecursive", dynlib: libORX.}
  ## Adds a unique delayed FX to an object and its children.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _zFXConfigID    Config ID of the FX to add
  ##  @param[in]   _fDelay         Delay time
  ##  @param[in]   _bPropagate    Should the delay be incremented with each child application?

proc removeFX*(pstObject: ptr orxOBJECT; zFXConfigID: cstring): orxSTATUS {.
    cdecl, importc: "orxObject_RemoveFX", dynlib: libORX.}
  ## Removes an FX using its config ID.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _zFXConfigID    Config ID of the FX to remove
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc removeFXRecursive*(pstObject: ptr orxOBJECT; zFXConfigID: ptr orxCHAR) {.
    cdecl, importc: "orxObject_RemoveFXRecursive", dynlib: libORX.}
  ## Removes an FX from an object and its children.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _zFXConfigID    Config ID of the FX to remove

proc removeAllFXs*(pstObject: ptr orxOBJECT): orxSTATUS {.cdecl,
    importc: "orxObject_RemoveAllFXs", dynlib: libORX.}
  ## Removes all FXs.
  ##  @param[in]   _pstObject      Concerned object
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc synchronizeFX*(pstObject: ptr orxOBJECT; pstModel: ptr orxOBJECT): orxSTATUS {.
    cdecl, importc: "orxObject_SynchronizeFX", dynlib: libORX.}
  ## Synchronizes FXs with another object's ones (if FXs are not matching on both objects the behavior is undefined).
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _pstModel       Model object on which to synchronize FXs
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc addSound*(pstObject: ptr orxOBJECT; zSoundConfigID: cstring): orxSTATUS {.
    cdecl, importc: "orxObject_AddSound", dynlib: libORX.}
  ## @}
  ## @name Sound
  ##  @{
  ## Adds a sound using its config ID.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _zSoundConfigID Config ID of the sound to add
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc removeSound*(pstObject: ptr orxOBJECT; zSoundConfigID: cstring): orxSTATUS {.
    cdecl, importc: "orxObject_RemoveSound", dynlib: libORX.}
  ## Removes a sound using its config ID.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _zSoundConfigID Config ID of the sound to remove
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc getLastAddedSound*(pstObject: ptr orxOBJECT): ptr orxSOUND {.cdecl,
    importc: "orxObject_GetLastAddedSound", dynlib: libORX.}
  ## Gets last added sound (Do *NOT* destroy it directly before removing it!!!).
  ##  @param[in]   _pstObject      Concerned object
  ##  @return      orxSOUND / nil

proc setVolume*(pstObject: ptr orxOBJECT; fVolume: orxFLOAT): orxSTATUS {.
    cdecl, importc: "orxObject_SetVolume", dynlib: libORX.}
  ## Sets volume for all sounds of an object.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _fVolume        Desired volume (0.0 - 1.0)
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc setPitch*(pstObject: ptr orxOBJECT; fPitch: orxFLOAT): orxSTATUS {.
    cdecl, importc: "orxObject_SetPitch", dynlib: libORX.}
  ## Sets pitch for all sounds of an object.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _fPitch         Desired pitch (0.0 - 1.0)
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc play*(pstObject: ptr orxOBJECT): orxSTATUS {.cdecl,
    importc: "orxObject_Play", dynlib: libORX.}
  ## Plays all the sounds of an object.
  ##  @param[in]   _pstObject      Concerned object
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc stop*(pstObject: ptr orxOBJECT): orxSTATUS {.cdecl,
    importc: "orxObject_Stop", dynlib: libORX.}
  ## Stops all the sounds of an object.
  ##  @param[in]   _pstObject      Concerned object
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc addShader*(pstObject: ptr orxOBJECT; zShaderConfigID: cstring): orxSTATUS {.
    cdecl, importc: "orxObject_AddShader", dynlib: libORX.}
  ## @}
  ## @name Shader
  ##  @{
  ## Adds a shader to an object using its config ID.
  ##  @param[in]   _pstObject        Concerned object
  ##  @param[in]   _zShaderConfigID  Config ID of the shader to add
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc addShaderRecursive*(pstObject: ptr orxOBJECT;
                                  zShaderConfigID: ptr orxCHAR) {.cdecl,
    importc: "orxObject_AddShaderRecursive", dynlib: libORX.}
  ## Adds a shader to an object and its children.
  ##  @param[in]   _pstObject        Concerned object
  ##  @param[in]   _zShaderConfigID  Config ID of the shader to add

proc removeShader*(pstObject: ptr orxOBJECT; zShaderConfigID: cstring): orxSTATUS {.
    cdecl, importc: "orxObject_RemoveShader", dynlib: libORX.}
  ## Removes a shader using its config ID.
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _zShaderConfigID Config ID of the shader to remove
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc removeShaderRecursive*(pstObject: ptr orxOBJECT;
                                     zShaderConfigID: ptr orxCHAR) {.cdecl,
    importc: "orxObject_RemoveShaderRecursive", dynlib: libORX.}
  ## Removes a shader from an object and its children.
  ##  @param[in]   _pstObject        Concerned object
  ##  @param[in]   _zShaderConfigID  Config ID of the shader to remove

proc enableShader*(pstObject: ptr orxOBJECT; bEnable: orxBOOL) {.cdecl,
    importc: "orxObject_EnableShader", dynlib: libORX.}
  ## Enables an object's shader.
  ##  @param[in]   _pstObject        Concerned object
  ##  @param[in]   _bEnable          Enable / disable

proc isShaderEnabled*(pstObject: ptr orxOBJECT): orxBOOL {.cdecl,
    importc: "orxObject_IsShaderEnabled", dynlib: libORX.}
  ## Is an object's shader enabled?
  ##  @param[in]   _pstObject        Concerned object
  ##  @return      orxTRUE if enabled, orxFALSE otherwise

proc addTimeLineTrack*(pstObject: ptr orxOBJECT;
                                zTrackConfigID: cstring): orxSTATUS {.cdecl,
    importc: "orxObject_AddTimeLineTrack", dynlib: libORX.}
  ## @}
  ## @name TimeLine
  ##  @{
  ## Adds a timeline track to an object using its config ID.
  ##  @param[in]   _pstObject        Concerned object
  ##  @param[in]   _zTrackConfigID   Config ID of the timeline track to add
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc addTimeLineTrackRecursive*(pstObject: ptr orxOBJECT;
    zTrackConfigID: cstring) {.cdecl,
                                importc: "orxObject_AddTimeLineTrackRecursive",
                                dynlib: libORX.}
  ## Adds a timeline track to an object and its children.
  ##  @param[in]   _pstObject        Concerned object
  ##  @param[in]   _zTrackConfigID   Config ID of the timeline track to add

proc removeTimeLineTrack*(pstObject: ptr orxOBJECT;
                                   zTrackConfigID: cstring): orxSTATUS {.cdecl,
    importc: "orxObject_RemoveTimeLineTrack", dynlib: libORX.}
  ## Removes a timeline track using its config ID
  ##  @param[in]   _pstObject      Concerned object
  ##  @param[in]   _zTrackConfigID Config ID of the timeline track to remove
  ##  @return      orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc removeTimeLineTrackRecursive*(pstObject: ptr orxOBJECT;
    zTrackConfigID: ptr orxCHAR) {.cdecl, importc: "orxObject_RemoveTimeLineTrackRecursive",
                                dynlib: libORX.}
  ## Removes a timeline track from an object and its children.
  ##  @param[in]   _pstObject        Concerned object
  ##  @param[in]   _zTrackConfigID   Config ID of the timeline track to remove

proc enableTimeLine*(pstObject: ptr orxOBJECT; bEnable: orxBOOL) {.cdecl,
    importc: "orxObject_EnableTimeLine", dynlib: libORX.}
  ## Enables an object's timeline.
  ##  @param[in]   _pstObject        Concerned object
  ##  @param[in]   _bEnable          Enable / disable

proc isTimeLineEnabled*(pstObject: ptr orxOBJECT): orxBOOL {.cdecl,
    importc: "orxObject_IsTimeLineEnabled", dynlib: libORX.}
  ## Is an object's timeline enabled?
  ##  @param[in]   _pstObject        Concerned object
  ##  @return      orxTRUE if enabled, orxFALSE otherwise

proc getName*(pstObject: ptr orxOBJECT): cstring {.cdecl,
    importc: "orxObject_GetName", dynlib: libORX.}
  ## @}
  ## @name Name
  ##  @{
  ## Gets object config name.
  ##  @param[in]   _pstObject      Concerned object
  ##  @return      orxSTRING / orxSTRING_EMPTY
